finished employments, and fixed view size,

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 
     <div id = "wrapper"> <!-- wraps around all of the main components of the body-->
     <header> <!-- header starts -->
+
         <h1>Owen Lennox</h1>
         <p> My Online <strong>Resume</strong></p>
+
     </header>
     <!-- header ends, nav starts-->
         <div id = "container"> <!-- holds main and nav function, will help with organization-->
@@ -32,9 +34,9 @@
             <h2>Home</h2>
             <div id = "bot"> <!-- will use this to format the image and paragraphs -->
             <img src="src/131981151_h1ywng57be copy.jpg" alt = "Owen Lennox">    <!-- headshot -->
-            <p> My name is Owen Lennox, and I am a rising junior at Boston university double majoring in computer Science and Economics. I would like to advance my career by getting into the banking industry.</p>
+            <p id = bio> My name is Owen Lennox, and I am a rising junior at Boston university double majoring in computer Science and Economics. I would like to advance my career by getting into the banking industry.</p>
             </div> <!-- bot ends here -->
-                <p> Welcome to my website. On this website, you will find information about my former employment, achievments, and other infromation about myself.</p>
+                <p id = "intro"> Welcome to my website. On this website, you will find information about my former employment, achievments, and other infromation about myself.</p>
 
             </div> <!-- top ends here-->
 
