--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <li><p>Links</p></li>
                 <li>  <a href = index.html> Home </a> </li>
                 <li> <a href = education.html> Education </a> </li>
-                <li> <a href = employment.html> Employment </a> </li>
-                <li> <a href = achievements.html>  Achievements</a> </li>
+                <li> <a href = experience.html> Experience </a> </li>
+                <li> <a href = skills.html>  Skills</a> </li>
                 <li> <a href = course.html> Coursework </a> </li>
                 <li> <a href = project.html> Projects </a> </li>
                 <li> <a href = "https://www.linkedin.com/in/owen-lennox-414771293/"> LinkedIn Profile</a> </li>
