--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <li> <a href = education.html> Education </a> </li>
                 <li> <a href = experience.html> Experience </a> </li>
                 <li> <a href = skills.html>  Skills</a> </li>
-                <li> <a href = course.html> Coursework </a> </li>
-                <li> <a href = project.html> Projects </a> </li>
+                <li> <a href = contacts.html> Contacts </a> </li>
+                <li> <a href = projects.html> Projects </a> </li>
                 <li> <a href = "https://www.linkedin.com/in/owen-lennox-414771293/"> LinkedIn Profile</a> </li>
             </ul>
         </nav>
