--- a/experience.html
+++ b/experience.html
@@ -31,10 +31,10 @@
         </nav>
         <!-- nav ends, main starts-->
         <main>
-            <div id = "exp-inner">
+            <div id = "exp-inner"> <!--start of exp-inner, format contents of main-->
                 <h2 > Experience and Employment</h2>
 
-                <table border = "">
+                <table border = ""> <!-- create table with border-->
                         <tr>
                             <td><strong><em>Orginization </em></strong> </td>
                             <td><strong><em>Role</em></strong></td>
@@ -65,18 +65,18 @@
                             <td> Cashier</td>
                             <td>Junen, 2025 - Present</td>
                         </tr>
-                </table>
+                </table><!-- end of table-->
 
 
 
-            </div>
+            </div> <!-- end of inner-->
         </main>
 
     </div>
 
 
     <footer>
-        <p> All rights reserved: <a href = " ">Credits</a>&#169</p>
+        <p> All rights reserved by Owen Lennox<a href = " ">Credits</a>&#169</p>
     </footer>
 </div>
 
