--- a/contacts.html
+++ b/contacts.html
@@ -32,9 +32,10 @@
         <!-- nav ends, main starts-->
 
         <main>
-            <div id = "contact-inner">
+            <div id = "contact-inner"> <!-- inner starts here -->
                 <h2> References / Contacts</h2>
-                <h3> My contact Information</h3>
+                <h3> My contact Information</h3><!--subsection of page-->
+                <!-- styles table at top of page-->
                 <table border = "">
                     <tr>
                         <td><strong>Name</strong></td>
@@ -48,9 +49,9 @@
                         <td><em>olennox@bu.edu</em></td>
                         <td><em><a href = "https://www.linkedin.com/in/owen-lennox-414771293/"> link</a> </em></td>
                     </tr>
-                </table>
-                <h3> My References</h3>
-                <table border = "">
+                </table><!-- table ends-->
+                <h3> My References</h3> <!-- next subsection of table-->
+                <table border = ""><!-- table format-->
                     <tr>
                         <td><strong>Name</strong></td>
                         <td><strong>Phone Number</strong></td>
@@ -66,16 +67,16 @@
                         <td> N/A</td>
                         <td><em>yostopmc@comcast.net</em></td>
                     </tr>
-                </table>
+                </table> <!-- table ends-->
 
-            </div>
+            </div> <!-- inner ends here-->
         </main>
 
     </div>
 
 
     <footer>
-        <p> All rights reserved: <a href = " ">Credits</a>&#169</p>
+        <p> All rights reserved by Owen Lennox <a href = " ">Credits</a>&#169</p>
     </footer>
 </div>
 
