--- a/education.html
+++ b/education.html
@@ -30,32 +30,31 @@
         </nav>
         <!-- nav ends, main starts-->
         <main>
-            <div class = "main-inner">
+            <div class = "main-inner"> <!-- holds all content isnide main -->
                 <h2>Education History</h2>
-                <ul id = "education">
+                <ul id = "education"> <!-- id to list my education -->
+                        <!-- list of high school college and coursework, use schoolname_sep to organize images-->
                     <li> Paramus Catholic, 2019-2023 <div id = "pc_sep"><p id = "pc_bio"> I attended Paramus Catholic for four years, In those years, I participated in sports, clubs, and developed my love for computer science.</p><img id = "pc" src = "src/pc.png" alt = "Paramus Catholic"></div></li>
                     <li> Boston University, 2023-Present <div id = "bu_sep"><p id = bu_bio>I am currently attending, Boston University. I am double majoring in computer science and Economics. At BU, I have become very involved in the Sigma Chi fraternity. I currently hold the position of vice president.</p><img id = "bu" src = "src/bu.png" alt = "Boston University"></div></li>
                     <li> Relevant Course Work, Boston University
                         <div id = coursework>
-                            <ul>
+                            <ul><!-- nested list to list coursework-->
                                 <li>CAS CS:330, Introduction to Algorithm Analysis- Grade: A</li>
                                 <li>CAS CS:237 Probability in Computing- Grade: A</li>
                                 <li>CAS EC:341, Monetary and Banking Institutions- Grade: A</li>
+                             </ul> <!-- end of coursework list-->
+                        </div> <!-- end of coursework div-->
+                    </li> <!-- done with course work-->
+                </ul><!-- done with all lists-->
 
-                            </ul>
-
-                        </div>
-                    </li>
-                </ul>
-
-            </div>
+            </div> <!-- end of main-inner function-->
         </main>
 
     </div>
 
 
     <footer>
-        <p> All rights reserved: <a href = " ">Credits</a>&#169</p>
+        <p> All rights reserved by Owen Lennox <a href = " ">Credits</a>&#169</p>
     </footer>
 </div>
 
