--- a/index.html
+++ b/index.html
@@ -16,39 +16,38 @@
     </header>
     <!-- header ends, nav starts-->
         <div id = "container"> <!-- holds main and nav function, will help with organization-->
-        <nav>
-            <ul> <!-- unordered list of internal links, + linkdelin-->
-                <li><p>Links</p></li>
-                <li>  <a href = index.html> Home </a> </li>
-                <li> <a href = education.html> Education </a> </li>
-                <li> <a href = experience.html> Experience </a> </li>
-                <li> <a href = skills.html>  Skills</a> </li>
-                <li> <a href = contacts.html> Contacts </a> </li>
-                <li> <a href = projects.html> Projects </a> </li>
-                <li> <a href = "https://www.linkedin.com/in/owen-lennox-414771293/"> LinkedIn Profile</a> </li>
-            </ul>
-        </nav>
+            <nav>
+                <ul> <!-- unordered list of internal links, + linkdelin-->
+                    <li><p>Links</p></li>
+                    <li>  <a href = index.html> Home </a> </li>
+                    <li> <a href = education.html> Education </a> </li>
+                    <li> <a href = experience.html> Experience </a> </li>
+                    <li> <a href = skills.html>  Skills</a> </li>
+                    <li> <a href = contacts.html> Contacts </a> </li>
+                    <li> <a href = projects.html> Projects </a> </li>
+                    <li> <a href = "https://www.linkedin.com/in/owen-lennox-414771293/"> LinkedIn Profile</a> </li>
+                </ul>
+             </nav>
             <!-- nav ends, main starts-->
-        <main>
-            <div id = "top"> <!-- id for all elements inside main content, will be useful for display -->
-            <h2>Home</h2>
-            <div id = "bot"> <!-- will use this to format the image and paragraphs -->
-            <img src="src/131981151_h1ywng57be copy.jpg" alt = "Owen Lennox">    <!-- headshot -->
-            <p id = bio> My name is Owen Lennox, and I am a rising junior at Boston university double majoring in computer Science and Economics. I would like to advance my career by getting into the banking industry.</p>
-            </div> <!-- bot ends here -->
-                <p id = "intro"> Welcome to my website. On this website, you will find information about my former employment, achievments, and other infromation about myself.</p>
-
-            </div> <!-- top ends here-->
+            <main>
+                <div id = "top"> <!-- id for all elements inside main content, will be useful for display -->
+                    <h2>Home</h2>
+                    <div id = "bot"> <!-- will use this to format the image and paragraphs -->
+                        <img src="src/131981151_h1ywng57be copy.jpg" alt = "Owen Lennox">    <!-- headshot -->
+                        <p id = bio> My name is Owen Lennox, and I am a rising junior at Boston university double majoring in computer Science and Economics. I would like to advance my career by getting into the banking industry.</p>
+                    </div> <!-- bot ends here -->
+                    <p id = "intro"> Welcome to my website. On this website, you will find information about my former employment, achievments, and other infromation about myself.</p>
+                </div> <!-- top ends here-->
 
         </main>
 
-        </div>
+        </div> <!-- container ends -->
 
 
 <footer>
-    <p> All rights reserved: <a href = " ">Credits</a>&#169</p>
+    <p> All rights reserved by Owen Lennox <a href = " ">Credits</a>&#169</p>
 </footer>
-</div>
+</div> <!-- wrapper ends -->
 
 </body>
 </html>
