--- a/skills.html
+++ b/skills.html
@@ -15,7 +15,9 @@
 
     </header>
     <!-- header ends, nav starts-->
+
     <div id = "container"> <!-- holds main and nav function, will help with organization-->
+
         <nav>
             <ul> <!-- unordered list of internal links, + linkdelin-->
                 <li><p>Links</p></li>
@@ -32,36 +34,37 @@
         <!-- nav ends, main starts-->
 
         <main>
-            <div id = "skills-inner"> <!-- class to manage the inner of skill main-->
-                <h2> Skills </h2>
-                <h3> Programming languages</h3>
-                <ul>
-                    <li> <strong>Java</strong> - <em>Obtained through CS 112- BU</em> </li>
-                    <li> <strong>Python</strong> - <em>Obtained through CS 237, CS 330, CS 132 - BU</em></li>
-                    <li> <strong>XML</strong> - <em> Obtained through CS 460 -BU</em></li>
-                </ul>
-                <ul>
-                    <li> <strong> SQL </strong> - <em> Obtained through CS 460 - BU</em></li>
-                    <li> <strong>NoSQL</strong> - <em> Obtained through CS 460 - BU </em> </li>
-                    <li> <strong> STATA </strong> - <em> Obtained through EC 204- BU</em></li>
 
-                </ul>
-                <h3> Qualities </h3>
-                <ul>
-                    <li> <strong> Leadership </strong>  - <em>Obtained through Sigma Chi as Vice president </em></li>
-                    <li> <strong> Teamwork</strong> - <em> Obtained through working with E-board as Sigma Chi Vice-President</em></li>
-                    <li> <strong> Problem-Solving </strong> - <em> Obtained through CS-330 and through Sigma Chi</em></li>
-                </ul>
+                <div id = "skills-inner"> <!-- class to manage the inner of skill main-->
+                    <h2> Skills </h2>
+                    <h3> Programming languages</h3>
+                    <ul> <!-- list of coding languages-->
+                        <li> <strong>Java</strong> - <em>Obtained through CS 112- BU</em> </li>
+                        <li> <strong>Python</strong> - <em>Obtained through CS 237, CS 330, CS 132 - BU</em></li>
+                        <li> <strong>XML</strong> - <em> Obtained through CS 460 -BU</em></li>
+                    </ul>
+                    <ul>
+                        <li> <strong> SQL </strong> - <em> Obtained through CS 460 - BU</em></li>
+                        <li> <strong>NoSQL</strong> - <em> Obtained through CS 460 - BU </em> </li>
+                        <li> <strong> STATA </strong> - <em> Obtained through EC 204- BU</em></li>
+
+                    </ul>
+                    <h3> Qualities </h3> <!-- list of qualities-->
+                    <ul>
+                        <li> <strong> Leadership </strong>  - <em>Obtained through Sigma Chi as Vice president </em></li>
+                        <li> <strong> Teamwork</strong> - <em> Obtained through working with E-board as Sigma Chi Vice-President</em></li>
+                        <li> <strong> Problem-Solving </strong> - <em> Obtained through CS-330 and through Sigma Chi</em></li>
+                    </ul>
 
 
-            </div>
+            </div><!-- end of inner div-->
         </main>
 
     </div>
 
 
     <footer>
-        <p> All rights reserved: <a href = " ">Credits</a>&#169</p>
+        <p> All rights reserved by Owen Lennox<a href = " ">Credits</a>&#169</p>
     </footer>
 </div>
 
